第一版完整版（权限划分和前端还待优化）